<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang_di"
        app:layout_constraintBottom_toTopOf="@+id/tv_andro_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="2dp"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/tv_andro_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/andro_story"
        android:textSize="32sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"/>

    <LinearLayout
        android:id="@+id/ll_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_andro_story"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:alpha="0"
        tools:alpha="100">

        <Button
            android:id="@+id/btn_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk" />

        <Button
            android:id="@+id/btn_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:layout_marginStart="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>