<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_story.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_preview_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_place_holder_image"
            android:contentDescription="@string/gambar_cerita"/>

        <LinearLayout
            android:id="@+id/ll_kamera_galeri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_preview_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_galeri"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/galeri"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_kamera"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/kamera"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start|top"
            android:hint="@string/tambahkan_deskripsi"
            android:inputType="textCapSentences"
            android:maxLength="255"
            android:textColorHint="#8D6E63"
            app:layout_constraintTop_toBottomOf="@id/ll_kamera_galeri"
            tools:layout_editor_absoluteX="8dp"
            android:autofillHints="deskripsi" />

        <Button
            android:id="@+id/btn_unggah"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/unggah" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>