<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textStyle="bold"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"/>

        <TextView
            android:id="@+id/tv_deskripsi_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_sign_up"
            app:layout_constraintTop_toBottomOf="@id/tv_daftar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_nama_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi_signup"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"/>

        <com.example.myandrostory.customView.EditTextName
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_signup" />

        <TextView
            android:id="@+id/tv_email_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_register_name"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"/>

        <com.example.myandrostory.customView.EditTextEmail
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_signup" />

        <TextView
            android:id="@+id/tv_password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_register_email"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"/>

        <com.example.myandrostory.customView.EditTextPassword
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_signup" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/daftar"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linear_layout_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_daftar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_to_masuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:layout_marginStart="3dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>