<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textStyle="bold"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"/>

        <TextView
            android:id="@+id/tv_deskripsi_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk_menggunakan_akun_anda"
            app:layout_constraintTop_toBottomOf="@id/tv_masuk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi_login"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"/>

        <com.example.myandrostory.customView.EditTextEmail
            android:id="@+id/ed_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_login" />

        <TextView
            android:id="@+id/tv_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login_email"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"/>

        <com.example.myandrostory.customView.EditTextPassword
            android:id="@+id/ed_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/masuk"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linear_layout_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_to_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:layout_marginStart="3dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>